layout done. But cheatsheet not fulfilled yet. updates coming soon.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML CheatSheet by Mahi</title>
     <link rel="stylesheet" href="style.css">
+    <script src="prism.js"></script>
+    <link rel="stylesheet" href="prism.css">
 </head>
 <body>
     <nav>
-        <span class="logo"><img src="logo.png" alt=""></span>
+        <span class="logo"><img src="images/logo.png" alt=""></span>
         <div class="content center">
             This HTML CheatSheet is for You!
         </div>
     </nav>
     <div class="container">
-        <ul>
-            <li>HTML Boilerplate</li>
-            <li>Marquee tag</li>
-        </ul>
+        <ol>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-html"><code>&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    
+&lt;/body&gt;
+&lt;/html&gt;</code></pre>
+            </li>
+            <li><b>OL Tag:</b> This is the basic ordered list
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+            <li><b>HTML Boilerplate</b> This is the html boilerplate code
+                <pre class="language-js"><code>var i = 45; // this is a dummy code </code></pre>
+            </li>
+        </ol>
     </div>
 </body>
 </html>
